fixed titles size and spacing

--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -212,10 +212,12 @@ body {
   text-shadow: 0 1px 0 white;
   color: #666;
   font-size: 15px;
-  margin-left: 0px !important;
-  width: 25% !important;
-
-  width:auto;
+  margin-left: 1.5% !important;
+}
+.bullet h3{
+  font-size: 22px;
+  margin-bottom: 3%;
+  font-weight: 500;
 }
 .bulletIcon{
   font-size: 125px;
@@ -397,10 +399,7 @@ body {
     margin-right: 21%;
   }
 }
-@media (max-width: 767px) {
-.bullet{
-  width:auto !important;
-}}
+
 @media (max-width: 700px) {
   .buttonRegister{
     font-size: 14px;
